Introduce and use UTF-8 Constant for charsets